--- a/calitp-data-analysis/pyproject.toml
+++ b/calitp-data-analysis/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "calitp-data-analysis"
-version = "2023.2.15"
+version = "2023.3.30"
 description = "Shared code for querying Cal-ITP data in notebooks, primarily."
 authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]
 
@@ -8,10 +8,10 @@ authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]
 python = "~3.9"
 ipython = "^8.9.0"
 siuba = "^0.4.2"
-jinja2 = "<3.1.0"
 sqlalchemy-bigquery = "^1.6.1"
 pandas-gbq = "^0.19.1"
 calitp-data = "2023.2.13.1"
+jinja2 = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
